# wpwiki

./: .gitignore  CMakeLists.txt  README.md  WPMediaWikiConfig.cmake.in  wpwiki.cbp  wpwiki_version.h
examples/: .gitignore  wikisearchform.h  wikisearchform.ui
examples/WikiSearch/: CMakeLists.txt  Makefile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  wikiform.cpp  wikiform.h  wikiform.ui
src/: CMakeLists.txt  WPMediaWiki.cpp  WPMediaWiki.h  WPMediaWiki_p.h  browsepage.cpp  browsepage.h  cookiehandler.h  generalinfo.cpp  login.cpp  login.h  logout.cpp  logout.h  mediawiki.cpp  mediawiki.h  mediawiki_export.h  mediawiki_p.h  parse.cpp  parse.h  qt_MediaWiki.pri  query.cpp  query.h  queryimageinfo.cpp  queryimageinfo.h  queryimages.cpp  queryimages.h  queryrevision.cpp  queryrevision.h  querysiteinfogeneral.cpp  querysiteinfogeneral.h  querysiteinfousergroups.cpp  querysiteinfousergroups.h  shield.cpp  shield.h  upload.cpp  upload.h  wikipage.cpp  wikipage.h  work.cpp  work.h  work_p.h
src/example/: wikisearchform.cpp
tests/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  pagetest.cpp  queryinfotest.cpp
tests/testserver/: fakeserver.cpp
